LITT Changelog:
===============
 * 2019-09-23: Now has a single toInt template for all number conversions thanks to constexpr if.
 * 2019-09-23: Added toStr for brevity.
 * 2019-09-23: Grouped all Litt members together. Adjusted help.
 * 2019-09-23: The brmy listing now uses the last five years by default, like the *bcy listings.
 * 2019-09-23: Factored out fmtv function from std_string_fmt_impl macro thanks to va_copy.
 * 2019-09-23: Renamed short name "btst" to "bs" for naming consistency.
 * 2019-09-23: Removed redundant listings: ll, ss, gg, soo, cc. 
 * 2019-09-23: Added -i option for including additional columns and adding non-null to where condition.
 * 2019-09-23: Make where condition handling more robust and clear.
 * 2019-09-21: Removed unsigned arguments, always use int. Use toInt instead of std::stoi (control the error message).
 * 2019-09-21: Cleaned up arg functions.
 * 2019-09-21: Tigthen up addBook and Litt constructor, allow empty -dlist separator. Misc other minor changes.
 * 2019-09-20: Uses comma operator instead of " JOIN " for joining tables in hard-coded queries to save space. Tighten up titleStory query.
 * 2019-09-20: Made DWL columnInfo a bit more readable.
 * 2019-09-20: Clean up defines for columnInfos. Use more macros to check syntax, no need to undef. Factored out DR.
 * 2019-09-20: Replaced calcMaxWidth goto-loop in addBook with slightly less tricky for-loop.
 * 2019-09-20: Tigthen up runOutputQuery, executeUserSql and executeSql.
 * 2019-09-19: Can now pass r-value queries to runOutputQuery! ;)
 * 2019-09-19: Reduced line count, got rid of unneeded mutable:s and consts. Added const for OutputQuery.
 * 2019-09-19: Minimize main.
 * 2019-09-19: Removed braces for confirm-ifs and list actions.
 * 2019-09-19: Added checkExists, selectSingleValue => selectValue, selectRowValues => selectRows, selectRowIdValues => selectIds, userSql => sql.
 * 2019-09-19: Removed commented out extra code for actionHash.