@@ -1,5 +1,6 @@
 LITT Changelog:
 ===============
+ * 2019-09-24: Moved quote and colWidth inside PeriodColumn, only used there and assumed to be.
  * 2019-09-23: Now has a single toInt template for all number conversions thanks to constexpr if.
  * 2019-09-23: Added toStr for brevity.
  * 2019-09-23: Grouped all Litt members together. Adjusted help.
